--- a/index.html
+++ b/index.html
@@ -1,13 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title>Document</title>
 </head>
+
 <body>
-    
-    <h1>Hello world</h1>
+
+    <!-- NAVBAR START  -->
+    <nav class="nav flex border">
+        <div class="nav-items border w_30">
+            <h1>AB</h1>
+        </div>
+        <div class="nav-items border w_70">
+            <ul class="flex border">
+                <li><a href="#">Home</a></li>
+                <li><a href="">Skills</a></li>
+                <li><a href="">Projects</a></li>
+                <li><a href="">Experience</a></li>
+                <li><a href="">Contact me</a></li>
+            </ul>
+        </div>
+
+    </nav>
 </body>
+
 </html>
