--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <!-- NAVBAR START  -->
     <header class="border container-fluid">
       <nav id="nav" class="flex font-poppins w-100 flex-column">
-        <div class="nav-brand border">
-          <a href="#" class="text-dark text-lg font-bold border ">ABD</a>
+        <div class="nav-brand">
+          <a href="#" class="text-dark text-lg font-bold border">ABD</a>
         </div>
 
         <div class="toggle-btn border">
@@ -53,7 +53,6 @@
         </div>
       </nav>
     </header>
-
 
     <script src="./js/index.js"></script>
   </body>
