banner page made

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </head>
 
   <body>
-    <!-- NAVBAR START  -->
+    <!-- HEADER START  -->
     <header class="border container-fluid">
       <nav id="nav" class="flex font-poppins w-100 flex-column">
         <div class="nav-brand">
@@ -53,6 +53,22 @@
         </div>
       </nav>
     </header>
+
+    <!-- HEADER END  -->
+
+    <!-- BANNER -->
+    <section id="banner" class="font-poppins border container-fluid">
+        <div class="banner-right border w-80 text-center mx-auto">
+            <img src="./assets/imgs/profile.jpg" alt="">
+        </div>  
+        <div class="banner-left border text-center w-80 mx-auto">
+            <h1 class="text-red">Hello</h1>
+            <h1>My name is Abdur rehman ali</h1>
+            <span class="font-bold">I am ASE@Devsinc and final year student at GIK</span>
+        </div>   
+    </section>
+
+
 
     <script src="./js/index.js"></script>
   </body>
