--- a/index.html
+++ b/index.html
@@ -58,17 +58,38 @@
 
     <!-- BANNER -->
     <section id="banner" class="font-poppins border container-fluid">
-        <div class="banner-right border w-80 text-center mx-auto">
-            <img src="./assets/imgs/profile.jpg" alt="">
-        </div>  
-        <div class="banner-left border text-center w-80 mx-auto">
-            <h1 class="text-red">Hello</h1>
-            <h1>My name is Abdur rehman ali</h1>
-            <span class="font-bold">I am ASE@Devsinc and final year student at GIK</span>
-        </div>   
+      <div class="banner-right border w-80 text-center mx-auto">
+        <img src="./assets/imgs/profile.jpg" alt="" />
+      </div>
+      <div class="banner-left border text-center w-80 mx-auto">
+        <h1 class="text-red">Hello</h1>
+        <h1>My name is Abdur rehman ali</h1>
+        <span class="font-bold"
+          >I am ASE@Devsinc and final year student at GIK</span
+        >
+      </div>
     </section>
 
+    <!-- BANNER END-->
 
+    <!-- SKILLS  -->
+    <section id="skills" class="border">
+      <h1 class="text-red font-poppins text-uppercase text-center border-bottom">
+        skills
+      </h1>
+      <div class="skills-list">
+        <h2 class="font-bold font-poppins text-dark text-center">HTML</h2>
+        <h2 class="font-bold font-poppins text-dark text-center">CSS</h2>
+        <h2 class="font-bold font-poppins text-dark text-center">JAVASCRIPT</h2>
+        <h2 class="font-bold font-poppins text-dark text-center">REACT</h2>
+        <h2 class="font-bold font-poppins text-dark text-center">DJANGO</h2>
+        <h2 class="font-bold font-poppins text-dark text-center">GIT</h2>
+        <h2 class="font-bold font-poppins text-dark text-center">DOCKER</h2>
+        <h2 class="font-bold font-poppins text-dark text-center">ANSIBLE</h2>
+        <h2 class="font-bold font-poppins text-dark text-center">CHEF</h2>
+        <h2 class="font-bold font-poppins text-dark text-center">KUBERNETES</h2>
+      </div>
+    </section>
 
     <script src="./js/index.js"></script>
   </body>
