projects section added and made responsive

--- a/index.html
+++ b/index.html
@@ -91,6 +91,41 @@
       </div>
     </section>
 
+    <section id="projects">
+      <h1 class="project-header text-red font-poppins text-uppercase text-center">
+        PROJECTS
+      </h1>
+
+      <div class="project-list border">
+        <div class="project border text-center py-2 lg-w30">
+          <img src="./assets/imgs/bg.jpg" alt="image here" srcset="">
+          <h3 class="font-poppins font-bold">Project 1</h3>
+          <p class="font-poppins text-grey">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid incidunt tenetur praesentium quis id. Tempore velit adipisci assumenda. Eaque praesentium esse veritatis qui dicta at magnam eligendi unde illo quisquam.</p>
+        </div>
+        <div class="project border text-center py-2 lg-w30">
+          <img src="./assets/imgs/bg.jpg" alt="image here" srcset="">
+          <h3 class="font-poppins font-bold">Project 2</h3>
+          <p class="font-poppins text-grey">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid incidunt tenetur praesentium quis id. Tempore velit adipisci assumenda. Eaque praesentium esse veritatis qui dicta at magnam eligendi unde illo quisquam.</p>
+        </div>
+        <div class="project border text-center py-2 lg-w30">
+          <img src="./assets/imgs/bg.jpg" alt="image here" srcset="">
+          <h3 class="font-poppins font-bold">Project 3</h3>
+          <p class="font-poppins text-grey">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid incidunt tenetur praesentium quis id. Tempore velit adipisci assumenda. Eaque praesentium esse veritatis qui dicta at magnam eligendi unde illo quisquam.</p>
+        </div>
+        <div class="project border text-center py-2 lg-w30">
+          <img src="./assets/imgs/bg.jpg" alt="image here" srcset="">
+          <h3 class="font-poppins font-bold">Project 4</h3>
+          <p class="font-poppins text-grey">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid incidunt tenetur praesentium quis id. Tempore velit adipisci assumenda. Eaque praesentium esse veritatis qui dicta at magnam eligendi unde illo quisquam.</p>
+        </div>
+        <div class="project border text-center py-2 lg-w30">
+          <img src="./assets/imgs/bg.jpg" alt="image here" srcset="">
+          <h3 class="font-poppins font-bold">Project 5</h3>
+          <p class="font-poppins text-grey">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid incidunt tenetur praesentium quis id. Tempore velit adipisci assumenda. Eaque praesentium esse veritatis qui dicta at magnam eligendi unde illo quisquam.</p>
+        </div>
+      </div>
+      
+    </section>
+
     <script src="./js/index.js"></script>
   </body>
 </html>
