--- a/index.html
+++ b/index.html
@@ -126,6 +126,10 @@
       
     </section>
 
+    <section id="footer" class="text-light text-center font-poppins">
+      copyright@abdurrehmanali.com
+    </section>
+
     <script src="./js/index.js"></script>
   </body>
 </html>
