--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
           <ul class="flex flex-column text-center">
             <li><a href="#" class="link">Home</a></li>
             <li><a href="#" class="link">About</a></li>
-            <li><a href="#" class="link">Skills</a></li>
-            <li><a href="#" class="link">Projects</a></li>
+            <li><a href="#skills" class="link">Skills</a></li>
+            <li><a href="#projects" class="link">Projects</a></li>
           </ul>
         </div>
 
